[project]
name = "fantasyfootball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.8.3",
    "yfpy>=16.0.3",
]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "ICN",
    "ISC",
    "W",
]

fixable = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
